src/components/pages/_college-template.scss
/* ... */
.college-success__featured-story-title {
  margin-bottom: rem(15);
}

// Calls To Action Section
.college-ctas {
  margin-left: rem(-36);
  margin-right: rem(-36);
  position: relative;
  @include media-breakpoint-up(md) {
    margin-left: rem(-70);
    margin-right: rem(-70);
  }
  @include media-breakpoint-up(xl) {
    margin-left: rem(-190);
    margin-right: rem(-190);
    min-height: rem(810);
  }
}

.college-ctas__cta {
  @extend %outer-pad-x;
  padding-top: rem(60);
  padding-bottom: rem(40);
  position: relative;
  background-color: $iastate-red;
  z-index: 1;
  @include media-breakpoint-up(xl) {
    max-width: rem(520);
    margin-left: auto;
    margin-right: rem(82);
    padding: rem(60) rem(85) rem(30);
  }
  &.college-ctas__cta-top {
    @include media-breakpoint-up(xl) {
      top: rem(-60);
    }
  }
  &.college-ctas__cta-bottom {
    @include media-breakpoint-up(xl) {
      margin-top: rem(5);
    }
  }

  &:before {
    content: "";
    border-bottom: rem(8) solid $iastate-gold;
    top: rem(-4);
    left: 50%;
    margin-left: rem(-28);
    width: rem(56);
    height: rem(8);
    position: absolute;
  }
  .iastate22-button {
    @extend %iastate22-button--reverse;
    margin-top: rem(30);
  }
}

.college-ctas__cta-title {
  color: $white;
  margin: 0 0 rem(22);
  padding: 0;
}

.college-ctas__cta-intro {
  color: $white;
  line-height: (29 / 18);
  font-family: $typeface-sans-serif;
  font-weight: 700;
}

.college-ctas__cta-media {
  @extend %responsive-img;
  @include media-breakpoint-up(xl) {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
  }
  &:before {
    padding-top: 56.25%;
  }
}

// Keep Exploring Section
.college-keep-exploring {
  margin-left: rem(-36);
  margin-right: rem(-36);
  @include media-breakpoint-up(md) {
    margin-left: rem(-70);
    margin-right: rem(-70);
  }
  @include media-breakpoint-up(xl) {
    margin-left: rem(-190);
    margin-right: rem(-190);
  }
  .call-to-action--small {
    padding-bottom: rem(60);
    .call-to-action__copy-wrap {
      padding: 0;
      @include media-breakpoint-up(md) {
        padding-right: rem(39);
      }
      .call-to-action__headline {
        text-align: left;
        @include media-breakpoint-up(md) {
          text-align: right;
        }
      }
    }
  }
}

